# Einstein_Chess

./: CMakeLists.txt  main.cpp
fltk_x64-windows/: CONTROL
fltk_x64-windows/debug/lib/: fltk_formsd.lib  fltk_gld.lib  fltk_imagesd.lib
fltk_x64-windows/include/FL/: Fl.H  filename.H  forms.H
fltk_x64-windows/lib_MSVC/: fltk.lib  fltk_forms.lib  fltk_gl.lib  fltk_images.lib
fltk_x64-windows/share/fltk/: copyright  vcpkg.spdx.json  vcpkg_abi_info.txt
fltk_x64-windows/tools/fltk/: fltk-config
fltk_x64-windows/tools/fltk/debug/: fltk-config
include/AI/: MonteCarloAI.h
include/ChessPiece/: Board.h  Chess.h  PieceAttributes.h
include/ChessPieceGUI/: BoardGUI.h  BoardPiece.h  ChessGUI.h
include/GameGUI/: GameGUI.h
src/: ChessPiece.cpp
src/AI/: MonteCarloAI.cpp
src/ChessPiece/: Board.cpp  Board.h  Chess.cpp  Chess.h  PieceAttributes.h
src/ChessPieceGUI/: BoardGUI.cpp  BoardPiece.cpp  ChessGUI.cpp
src/GameGUI/: GameGUI.cpp
